<resources>
    <string name="app_name">TrainingApplication</string>
    <string name="test_service">Test Service</string>
    <string name="click_me">Click me</string>
    <string name="test_messenger_service">Test Messenger Service</string>
    <string name="workmanager">WorkManager</string>
    <string name="select_image">Select Image</string>
    <string name="set_permissions_in_settings">Set permission in settings</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>
    <string name="cancel_work">Cancel Work</string>
    <string name="blur_lv_3">The most blurred</string>
    <string name="blur_lv_2">More blurred</string>
    <string name="blur_lv_1">A little blur</string>
    <string name="blur_title">Select blur amount</string>
    <string name="description_image">The image to blur and save.</string>
    <string name="test_intent_service">Test Intent Service</string>
    <string name="test_job_intent_service">Test JobIntentService</string>
    <string name="start_intent_service">Start Intent Service</string>
</resources>